<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="sb">(</string>
    <string name="eb">)</string>
    <string name="back">←</string>
    <string name="clear">C</string>
    <string name="zero">0</string>
    <string name="memin">Mem</string>
    <string name="memout">MS</string>
    <string name="var">var X</string>
    <string name="sqrt">√</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="point">.</string>
    <string name="sum">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="into">x</string>
    <string name="div">÷</string>
    <string name="mod">%</string>
    <string name="ln">ln</string>
    <string name="tan">tan</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="pwr">^</string>
    <string name="pi">π</string>
    <string name="exp">e</string>
    <string name="fact">x!</string>
    <string name="log">log</string>
    <string name="DRG">DRG</string>
    <string name="sinh">sinh</string>
    <string name="cosh">cosh</string>
    <string name="invsin">sin-1</string>
    <string name="invcos">cos-1</string>
    <string name="invtan">tan-1</string>
    <string name="tanh">tanh</string>
    <string name="ans">Ans</string>
    <string name="sum1">=</string>
    <string name="variable">var x</string>
    <string name="back2calc">BACK</string>
    <string name="exit">Exit</string>
    

</resources>