<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator"
    android:background="#423939"
    android:orientation="vertical" >
    
    <RelativeLayout 
        android:id="@+id/displaylayout"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.50"
        android:orientation="horizontal" >
        
     <LinearLayout 
	    android:id="@+id/layout8"
	    android:layout_width="fill_parent"
	    android:layout_height="40dp"
	    android:background="#000000" >
	    
	    <TextView 
	        android:id="@+id/notification"
	        android:layout_height="40dp"
	        android:layout_width="wrap_content"
	        android:textSize="12sp"
	        android:textColor="#ffffff"
	        android:textStyle="bold"/>

	</LinearLayout>
	
	    <LinearLayout 
	    android:id="@+id/layout9"
	    android:layout_width="120dp"
	    android:layout_height="40dp"
	    android:background="#000000"
	    android:layout_marginLeft="160dp" >
	    
	    <TextView 
	        android:id="@+id/notification1"
	        android:layout_height="40dp"
	        android:layout_width="wrap_content"
	        android:textSize="12sp"
	        android:textColor="#ffffff"
	        android:textStyle="bold"/>
	</LinearLayout>
	</RelativeLayout>
    
    <LinearLayout  
	    android:id="@+id/layout1"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1.75"
	    android:background="#000000">

	    <TextView 
	        android:id="@+id/display"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_gravity="top|center_horizontal"
	        android:text="@string/zero"
	        android:gravity="bottom|right"
	        android:singleLine="false"
	        android:textColor="#ffffff"
	        android:textStyle="bold"
	        android:ellipsize="start"></TextView>

	</LinearLayout>
	<LinearLayout
	    android:id="@+id/layout2"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:orientation="horizontal" >

	        <Button
	            android:id="@+id/sb1"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_marginBottom="-5dp"
	            android:layout_marginLeft="-10dp"
	            android:layout_marginRight="-10dp"
	            android:layout_marginTop="-5dp"
	            android:textSize="30sp"
	            android:text="@string/sb" 
	            android:layout_weight="1"      
	            android:textStyle="bold" />

	        <Button 
	        android:id="@+id/eb1"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/eb"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	            android:textSize="30sp"
	    	android:layout_weight="1"
	    	
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/back"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/back"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	            android:textSize="30sp"
	    	android:layout_weight="1"
	    	
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/clear"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/clear"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	        android:textSize="30sp"
	    	android:textColor="#c70000"
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	</LinearLayout>
	<LinearLayout
	    android:id="@+id/layout3"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:orientation="horizontal" >

	        <Button 
	        android:id="@+id/sin"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/sin"
	        android:layout_marginRight="-10dp"
	    	android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	            android:textSize="30sp"
	    	android:layout_weight="1"
	    	
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/cos"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/cos"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	            android:textSize="30sp"
	    	
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/tan"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/tan"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	            android:textSize="30sp"
	    	
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/exp"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/exp"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	            android:textSize="30sp"
	    	
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	</LinearLayout>
	<LinearLayout
	    android:id="@+id/layout4"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:orientation="horizontal"
	    android:layout_weight="1" >

	        <Button 
	        android:id="@+id/sinh"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/sinh"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	            android:textSize="30sp"
	    	
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/cosh"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/cosh"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	            android:textSize="30sp"
	    	
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/tanh"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/tanh"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	            android:textSize="30sp"
	    	
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/ln"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/ln"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	            android:textSize="30sp"
	    	
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	</LinearLayout>
	<LinearLayout
	    android:id="@+id/layout5"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:orientation="horizontal" >

	        <Button 
	        android:id="@+id/invsin"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/invsin"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	            android:textSize="30sp"
	    	
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/invcos"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/invcos"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	            android:textSize="30sp"
	    	
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/invtan"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/invtan"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	            android:textSize="30sp"
	    	android:layout_weight="1"
	    	
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/log"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/log"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	            android:textSize="30sp"
	    	
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	</LinearLayout>
	<LinearLayout
	    android:id="@+id/layout6"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:orientation="horizontal" >

	        <Button 
	        android:id="@+id/fact"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/fact"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	            android:textSize="30sp"
	    	
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/pi"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/pi"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	            android:textSize="30sp"
	    	
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/sqrt"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/sqrt"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	            android:textSize="30sp"
	    	android:layout_weight="1"
	    	
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/pwr"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/pwr"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	            android:textSize="30sp"
	    	
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	</LinearLayout>
	<LinearLayout
	    android:id="@+id/layout7"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:orientation="horizontal" >

	        <Button 
	        android:id="@+id/var"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/var"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	            android:textSize="30sp"
	    	
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/DRG"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/DRG"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	            android:textSize="30sp"
	    	android:layout_weight="1"
	    	
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/sum1"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/sum"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	            android:textSize="30sp"
	    	android:layout_weight="1"
	    	
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/ans"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/ans"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	            android:textSize="30sp"
	    	android:layout_weight="1"
	    	
	        android:textStyle="bold"/>
	</LinearLayout>


</LinearLayout>