<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator"
    android:background="#423939"
    android:orientation="vertical" >
    
    <RelativeLayout 
        android:id="@+id/displaylayout"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal" >
        
     <LinearLayout 
	    android:id="@+id/layout8"
	    android:layout_width="fill_parent"
	    android:layout_height="40dp"
	    android:background="#000000" >
	    
	    <TextView 
	        android:id="@+id/notification"
	        android:layout_height="40dp"
	        android:layout_width="wrap_content"
	        android:textSize="12sp"
	        android:textColor="#ffffff"
	        android:textStyle="bold"/>

	</LinearLayout>
	
	    <LinearLayout 
	    android:id="@+id/layout9"
	    android:layout_width="120dp"
	    android:layout_height="40dp"
	    android:background="#000000"
	    android:layout_marginLeft="160dp" >
	    
	    <TextView 
	        android:id="@+id/notification1"
	        android:layout_height="40dp"
	        android:layout_width="wrap_content"
	        android:textSize="12sp"
	        android:textColor="#ffffff"
	        android:textStyle="bold"/>
	</LinearLayout>
	</RelativeLayout>
    
    <LinearLayout  
	    android:id="@+id/layout1"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1.75"
	    android:background="#000000">

	    <TextView 
	        android:id="@+id/display"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_gravity="top|center_horizontal"
	        android:text="@string/zero"
	        android:gravity="bottom|right"
	        android:singleLine="false"
	        android:textColor="#ffffff"
	        android:textStyle="bold"
	        android:ellipsize="start"></TextView>

	</LinearLayout>
	<LinearLayout
	    android:id="@+id/layout2"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:orientation="horizontal" >

	        <Button
	            android:id="@+id/sb"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_marginBottom="-5dp"
	            android:layout_marginLeft="-10dp"
	            android:layout_marginRight="-10dp"
	            android:layout_marginTop="-5dp"
	            android:textSize="30sp"
	            android:text="@string/sb" 
	            android:layout_weight="1"      
	            android:textStyle="bold" />

	        <Button 
	        android:id="@+id/eb"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/eb"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	    	android:layout_weight="1"
	    	android:textSize="30sp"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/back"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/back"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	    	android:layout_weight="1"
	    	android:textSize="30sp"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/clear"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/clear"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	    	android:textColor="#c70000"
	    	android:textSize="30sp"
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	</LinearLayout>
	<LinearLayout
	    android:id="@+id/layout3"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:orientation="horizontal" >

	        <Button 
	        android:id="@+id/memout"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/memout"
	        android:layout_marginRight="-10dp"
	    	android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	    	android:layout_weight="1"
	    	android:textSize="27sp"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/memin"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/memin"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	    	android:textSize="27sp"
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/mod"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/mod"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	    	android:textSize="30sp"
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/div"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/div"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	    	android:textSize="30sp"
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	</LinearLayout>
	<LinearLayout
	    android:id="@+id/layout4"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:orientation="horizontal"
	    android:layout_weight="1" >

	        <Button 
	        android:id="@+id/seven"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/seven"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	    	android:textSize="30sp"
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/eight"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/eight"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	    	android:textSize="30sp"
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/nine"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/nine"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	    	android:textSize="30sp"
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/into"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/into"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	    	android:textSize="30sp"
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	</LinearLayout>
	<LinearLayout
	    android:id="@+id/layout5"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:orientation="horizontal" >

	        <Button 
	        android:id="@+id/four"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/four"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	    	android:textSize="30sp"
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/five"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/five"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	    	android:textSize="30sp"
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/six"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/six"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	    	android:layout_weight="1"
	    	android:textSize="30sp"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/minus"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/minus"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	    	android:textSize="30sp"
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	</LinearLayout>
	<LinearLayout
	    android:id="@+id/layout6"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:orientation="horizontal" >

	        <Button 
	        android:id="@+id/one"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/one"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	    	android:textSize="30sp"
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/two"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/two"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	    	android:textSize="30sp"
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/three"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/three"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	    	android:layout_weight="1"
	    	android:textSize="30sp"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/plus"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/plus"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	    	android:textSize="30sp"
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	</LinearLayout>
	<LinearLayout
	    android:id="@+id/layout7"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:orientation="horizontal" >

	        <Button 
	        android:id="@+id/zero"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/zero"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	    	android:textSize="30sp"
	    	android:layout_weight="1"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/point"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/point"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	    	android:layout_weight="1"
	    	android:textSize="30sp"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/sum"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/sum"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	    	android:layout_weight="1"
	    	android:textSize="30sp"
	        android:textStyle="bold"/>
	        <Button 
	        android:id="@+id/ans"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/ans"
	        android:layout_marginRight="-10dp"
		    android:layout_marginLeft="-10dp"
	    	android:layout_marginBottom="-5dp"
	    	android:layout_marginTop="-5dp"
	    	android:layout_weight="1"
	    	android:textSize="30sp"
	        android:textStyle="bold"/>
	</LinearLayout>


</LinearLayout>